fix: alignment of professor cards

--- a/the-easy-score/src/screens/coursepage/course.css
+++ b/the-easy-score/src/screens/coursepage/course.css
@@ -179,10 +179,6 @@
   position: absolute; */
 }
 
-/* .testTest {
-  width: 105%;
-} */
-
 /* .profCardContainer {
   /* margin-left: 15px; */
 /* margin-right: 0; */
